--- a/site/site.html
+++ b/site/site.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
     <link href="./style.css" rel="stylesheet">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <title>Event Scrapper</title>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <title>EventJP Scrapper</title>
   </head>
   <body>
     <h1>Event Scrapper</h1>
@@ -18,10 +18,10 @@
 		<button id="ext">WYJDŹ</button><br><br>
     </div>
 		<h2>Choose which </h2>
-    <div class="strony">
-		<button id="str1">t.pia.jp</button><br><br>
-		<button id="str2">l-tike.com</button><br><br>
-		<button id="str3">eplus.jp</button><br><br>
+    <div class="pages">
+		<button id="pagePia">t.pia.jp</button><br><br>
+		<button id="pageLTike">l-tike.com</button><br><br>
+		<button id="pageEplus">eplus.jp</button><br><br>
 		<button id="all">All sides</button><br><br>
 	</div>
     <script src="./renderer.js"></script>
