Deleted useless brakes

--- a/site/site.html
+++ b/site/site.html
@@ -20,13 +20,13 @@
 		<h2>Choose which sites you want to scrape</h2>
     <div class="pages">
       <div class="page">
-		    <button id="pagePia"><img id="pia_img" src="./tpiajp.png" alt="t.pia.jp icon" style="scale: 0.7;"><br>t.pia.jp</button>
+		    <button id="pagePia"><img id="pia_img" src="./tpiajp.png" alt="t.pia.jp icon" style="scale: 0.7;">t.pia.jp</button>
       </div>
       <div class="page">
-        <button id="pageEplus"><img id="eplus_img" src="./eplus.png" alt="eplus.jp icon"  style="scale: 0.7;"><br>eplus.jp</button>
+        <button id="pageEplus"><img id="eplus_img" src="./eplus.png" alt="eplus.jp icon"  style="scale: 0.7;">eplus.jp</button>
       </div>
       <div class="page">
-        <button id="pageLTike"><img id="l-tike_img" src="./l-tike.png" alt="l-tike.com icon" style="scale: 1;"><br>l-tike.com</button>
+        <button id="pageLTike"><img id="l-tike_img" src="./l-tike.png" alt="l-tike.com icon" style="scale: 1;">l-tike.com</button>
       </div>
     </div>
     <script src="./renderer.js"></script>
