Renamed files. Changed the namings

--- a/site/site_main.html
+++ b/site/site_main.html
@@ -9,10 +9,10 @@
     <title>EventJPScrapper</title>
   </head>
   <body>
-    <h1>Event Scrapper</h1>
+    <h1>Event Scraper</h1>
 
     <div class="settings">
-	  <a href="site_scrape.html"><button id="start">Start Scrapping</button></a>
+	  <a href="site_scrape.html"><button id="start">Start Scraping</button></a>
 	  <a href="site_site_desc.html"><button id="site_desc">Sites Description</button></a>
 	  <a href="site_app_desc.html"><button id="app_desc">App Description</button></a>
 	  <a href=""><button id="exit">Exit</button></a>
