--- a/site/site_scrape.html
+++ b/site/site_scrape.html
@@ -6,10 +6,11 @@
     <link href="./style.css" rel="stylesheet">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <title>EventJP Scrapper</title>
+    <title>EventJP Scraper</title>
   </head>
-  <body>
-		<h2>Choose which sites you want to scrape</h2>
+  <body class="site_scrape">
+	<h1>Choose which sites you want to scrape</h1>
+
     <div class="pages">
       <div class="page">
 		    <button id="pagePia"><img id="pia_img" src="./tpiajp.png" alt="t.pia.jp icon" style="scale: 0.7;">t.pia.jp</button>
@@ -21,6 +22,7 @@
         <button id="pageLTike"><img id="l-tike_img" src="./l-tike.png" alt="l-tike.com icon" style="scale: 1;">l-tike.com</button>
       </div>
     </div>
+    
     <script src="./renderer.js"></script>
   </body>
 </html>
