--- a/site/site_app_desc.html
+++ b/site/site_app_desc.html
@@ -6,5 +6,5 @@
     <link href="./style.css" rel="stylesheet">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <title>EventJPScrapper</title>
+    <title>EventJPScraper</title>
   </head>
