Added back button

--- a/site/site_scrape.html
+++ b/site/site_scrape.html
@@ -23,6 +23,10 @@
       </div>
     </div>
     
+    <div class="settings">
+    <a href="site_main.html" style="scale: 0.8;"><button id="exit">Back</button></a>
+    </div>
+
     <script src="./renderer.js"></script>
   </body>
 </html>
