Added start button

--- a/site/site_scrape.html
+++ b/site/site_scrape.html
@@ -22,9 +22,12 @@
         <button id="pageLTike"><img id="l-tike_img" src="./l-tike.png" alt="l-tike.com icon" style="scale: 1;">l-tike.com</button>
       </div>
     </div>
-    
+
     <div class="settings">
+    <div class="pages">
     <a href="site_main.html" style="scale: 0.8;"><button id="exit">Back</button></a>
+    <a href="" style="scale: 0.8;"><button id="start_scrape">Start</button></a>
+    </div>
     </div>
 
     <script src="./renderer.js"></script>
