Modified buttons in inner site

--- a/site/site_scrape.html
+++ b/site/site_scrape.html
@@ -23,11 +23,10 @@
       </div>
     </div>
 
-    <div class="settings">
-    <div class="pages">
-    <a href="site_main.html" style="scale: 0.8;"><button id="exit">Back</button></a>
-    <a href="" style="scale: 0.8;"><button id="start_scrape">Start</button></a>
-    </div>
+    <div class="scrape_settings">
+    <a href="site_main.html"><button id="back" style="scale: 0.8;">Back</button></a>
+    <a href=""><button id="inner_settings" style="scale: 0.8;">Settings</button></a>
+    <a href=""><button id="start_scrape"  style="scale: 0.8;">Start</button></a>
     </div>
 
     <script src="./renderer.js"></script>
