Added comments to boost workflow

--- a/site/site_main.html
+++ b/site/site_main.html
@@ -13,8 +13,8 @@
 
     <div class="settings">
 	  <a href="site_scrape.html"><button id="start">Start Scraping</button></a>
-	  <a href="site_site_desc.html"><button id="site_desc">Sites Description</button></a>
-	  <a href="site_app_desc.html"><button id="app_desc">App Description</button></a>
+    <a href="site_site_desc.html"><button id="site_desc">Sites Description</button></a> <!-- Add description site in site_site_desc -->
+	  <a href="site_app_desc.html"><button id="app_desc">App Description</button></a> <!-- Add description site in app_site_desc -->
 	  <a href=""><button id="exit">Exit</button></a>
 
     <script src="./renderer.js"></script>
