--- a/site/site_scrape.html
+++ b/site/site_scrape.html
@@ -25,8 +25,8 @@
 
     <div class="scrape_settings">
     <a href="site_main.html"><button id="back" style="scale: 0.8;">Back</button></a>
-    <a href=""><button id="inner_settings" style="scale: 0.8;">Settings</button></a>
-    <a href=""><button id="start_scrape"  style="scale: 0.8;">Start</button></a>
+    <a href=""><button id="inner_settings" style="scale: 0.8;">Settings</button></a> <!-- Add setting for eplus and l-tike -->
+    <a href=""><button id="start_scrape"  style="scale: 0.8;">Start</button></a> <!-- Add another site after clicking this, which will show the choosen sites, loading wheel, prints in console -->
     </div>
 
     <script src="./renderer.js"></script>
