Added selection option (CSS wise)

--- a/site/site_scrape.html
+++ b/site/site_scrape.html
@@ -30,5 +30,13 @@
     </div>
 
     <script src="./renderer.js"></script>
+    <script>
+      const buttons = document.querySelectorAll('.siteSelect');
+        buttons.forEach(button => {
+          button.addEventListener('click', function() {
+            this.classList.toggle('selected');
+          });
+        });
+    </script>
   </body>
 </html>
