Added "Back" buttons to both sites and App description to the proper html

--- a/site/site_site_desc.html
+++ b/site/site_site_desc.html
@@ -8,3 +8,11 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>EventJPScraper</title>
   </head>
+  <body>
+
+    
+    <div class="scrape_settings">
+      <a href="site_main.html"><button id="back" style="scale: 0.8;">Back</button></a>
+    </div>
+  </body>
+</html>
