--- a/site/site_app_desc.html
+++ b/site/site_app_desc.html
@@ -8,3 +8,26 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>EventJPScraper</title>
   </head>
+  <body>
+    <h1>App description</h1>
+
+    <div class="app_desc">
+      <br>
+      <p>This app is a web scraper that scrapes event information from various ticket websites in Japan.<br>The app is designed to scrape event information from the following websites:</p>
+      <ul>
+        <a href="https://t.pia.jp/" target="_blank"><li>t.pia.jp</li></a>
+        <a href="https://eplus.jp/" target="_blank"><li>eplus.jp</li></a>
+        <a href="https://l-tike.com/" target="_blank"><li>l-tike.com</li></a>
+      </ul>
+      <p>The app allows Users to select which websites they want to scrape and provides settings options for eplus.jp and l-tike.com.<br>
+        (Data for t.pia.ja is taken from its front page, therefore cannot be modified.)<br>
+        Currently, the User can choose the scraped months for eplus.jp and precise dates for l-tike.com. <br>
+        (Currently it checks only for Kanto/Koshinetsu/Kinki/Hokuriku regions - will probably change in the future.)</p>
+        <br><br><br> 
+    </div>
+    
+    <div class="scrape_settings">
+      <a href="site_main.html"><button id="back" style="scale: 0.8;">Back</button></a>
+    </div>
+  </body>
+</html>
