Added CSS for the sites

--- a/site/site_app_desc.html
+++ b/site/site_app_desc.html
@@ -2,28 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>EventJPScraper</title>
   </head>
   <body>
-    <h1>App description</h1>
+    <h1>🎟️ App description 🎟️</h1>
 
     <div class="app_desc">
-      <br>
-      <p>This app is a web scraper that scrapes event information from various ticket websites in Japan.<br>The app is designed to scrape event information from the following websites:</p>
+      <p>This app is a web scraper that scrapes event information from various ticket websites in Japan. The app is designed to scrape event information from the following websites:</p><br>
       <ul>
-        <a href="https://t.pia.jp/" target="_blank"><li>t.pia.jp</li></a>
-        <a href="https://eplus.jp/" target="_blank"><li>eplus.jp</li></a>
-        <a href="https://l-tike.com/" target="_blank"><li>l-tike.com</li></a>
+        <li>✨<a href="https://t.pia.jp/" target="_blank" style="color: blue; text-decoration: underline;">Ticket Pia (t.pia.jp)</a></li>
+        <li>✨<a href="https://eplus.jp/" target="_blank" style="color: blue; text-decoration: underline;">e+ (eplus.jp)</a></li>
+        <li>✨<a href="https://l-tike.com/" target="_blank" style="color: blue; text-decoration: underline;">Lawson Ticket (l-tike.com)</a></li>
       </ul>
-      <p>The app allows Users to select which websites they want to scrape and provides settings options for eplus.jp and l-tike.com.<br>
-        (Data for t.pia.ja is taken from its front page, therefore cannot be modified.)<br>
-        Currently, the User can choose the scraped months for eplus.jp and precise dates for l-tike.com. <br>
-        (Currently it checks only for Kanto/Koshinetsu/Kinki/Hokuriku regions - will probably change in the future.)</p>
-        <br><br><br> 
+      <br><p>The app allows Users to select which websites they want to scrape and provides settings options for eplus.jp and l-tike.com.<br>
+        Currently, the User can choose the scraped months for eplus.jp and precise dates for l-tike.com.<br>
+        ⚠️(Currently it checks only for Kanto/Koshinetsu/Kinki/Hokuriku regions - will probably change in the future.)</p><br>
+        ⚠️ (Data for t.pia.ja is taken from its front page, therefore cannot be modified.)
     </div>
     
     <div class="scrape_settings">
