--- a/site/site_site_desc.html
+++ b/site/site_site_desc.html
@@ -2,15 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>EventJPScraper</title>
   </head>
   <body>
+    <h1>🌐 Site Description 🌐</h1>
 
-    
+    <div class="site_desc">
+      <p>✨<span class="bold_site">Ticket Pia (<a href="https://t.pia.jp/" target="_blank" style="color: blue; text-decoration: underline;">t.pia.jp</a>):</span><br>Ticket Pia is one of Japan's leading ticketing platforms, offering a wide range of tickets for concerts, sports events, theater performances, and more. Users can search for events by genre, location, or date, and purchase tickets directly through the website. 
+        The platform also provides information on upcoming events and exclusive pre-sale opportunities.</p>
+      <p>✨<span class="bold_site">e+ (<a href="https://eplus.jp/" target="_blank" style="color: blue; text-decoration: underline;">eplus.jp</a>):</span><br>e+ (eplus) is a major Japanese ticketing service that allows users to reserve, purchase, and obtain information on various events, including live concerts, theater, sports, and more. 
+        The platform offers a comprehensive search function, enabling users to find events by region, venue, or artist. Additionally, e+ provides services like Streaming+, a live streaming platform for concerts and events.</p>
+      <p>✨<span class="bold_site">Lawson Ticket (<a href="https://l-tike.com/" target="_blank" style="color: blue; text-decoration: underline;">l-tike.com</a>):</span><br>Lawson Ticket, commonly known as "L-tike," is a ticketing service operated by the Lawson convenience store chain in Japan. 
+        The platform offers tickets for a variety of events, including concerts, sports, theater, and leisure activities. Users can search for tickets by category or region and make purchases online. The service also provides information on exclusive pre-sales and membership benefits.</p>
+    </div>
     <div class="scrape_settings">
       <a href="site_main.html"><button id="back" style="scale: 0.8;">Back</button></a>
     </div>
