Added the page for the scraping

--- a/site/site_scrape.html
+++ b/site/site_scrape.html
@@ -26,7 +26,7 @@
     <div class="scrape_settings">
     <a href="site_main.html"><button id="back" style="scale: 0.8;">Back</button></a>
     <button id="inner_settings" style="scale: 0.8;">Settings</button> <!-- Add setting for eplus and l-tike -->
-    <a href=""><button id="start_scrape"  style="scale: 0.8;">Start</button></a> <!-- Add another site after clicking this, which will show the choosen sites, loading wheel, prints in console -->
+    <a href="site_scraping.html"><button id="start_scrape"  style="scale: 0.8;">Start</button></a> <!-- Add another site after clicking this, which will show the choosen sites, loading wheel, prints in console -->
     </div>
 
     <div id="settings_options" style="display: none;">
