Added emotes to make the site more colorful

--- a/site/site_app_desc.html
+++ b/site/site_app_desc.html
@@ -21,11 +21,13 @@
       <br><p>The app allows Users to select which websites they want to scrape and provides settings options for eplus.jp and l-tike.com.<br>
         Currently, the User can choose the scraped months for eplus.jp and precise dates for l-tike.com.<br>
         ⚠️(Currently it checks only for Kanto/Koshinetsu/Kinki/Hokuriku regions - will probably change in the future.)</p><br>
-        ⚠️ (Data for t.pia.ja is taken from its front page, therefore cannot be modified.)
+        <p>⚠️ (Data for t.pia.ja is taken from its front page, therefore cannot be modified.)</p><br><br>
+        <p>Made by Mast 🌠</p>
+
     </div>
     
     <div class="scrape_settings">
-      <a href="site_main.html"><button id="back" style="scale: 0.8;">Back</button></a>
+      <a href="site_main.html"><button id="back" style="scale: 0.8;">⏪Back</button></a>
     </div>
   </body>
 </html>
