--- a/site/site_scraping.html
+++ b/site/site_scraping.html
@@ -13,7 +13,7 @@
     <div id="chosen-sites" class="chosen-sites"></div>
     <div id="loading-wheel" class="loading-wheel"></div>
     <div id="output-box" class="output-box"></div>
-    <button id="exit-button" class="exit-button" style="display: none;">Exit</button>
+    <button id="exit-button" class="exit-button" style="display: none;">❌Exit</button>
 
     <script src="./renderer.js"></script>
   </body>
