--- a/site/site_site_desc.html
+++ b/site/site_site_desc.html
@@ -20,7 +20,7 @@
         The platform offers tickets for a variety of events, including concerts, sports, theater, and leisure activities. Users can search for tickets by category or region and make purchases online. The service also provides information on exclusive pre-sales and membership benefits.</p>
     </div>
     <div class="scrape_settings">
-      <a href="site_main.html"><button id="back" style="scale: 0.8;">Back</button></a>
+      <a href="site_main.html"><button id="back" style="scale: 0.8;">⏪Back</button></a>
     </div>
   </body>
 </html>
