--- a/site/site_main.html
+++ b/site/site_main.html
@@ -9,13 +9,14 @@
     <title>EventJPScrapper</title>
   </head>
   <body>
-    <h1>Event Scraper</h1>
+    <h1>🌠Event Scraper🌠</h1>
 
     <div class="settings">
-	  <a href="site_scrape.html"><button id="start">Start Scraping</button></a>
-    <a href="site_site_desc.html"><button id="site_desc">Sites Description</button></a> <!-- Add description site in site_site_desc -->
-	  <a href="site_app_desc.html"><button id="app_desc">App Description</button></a> <!-- Add description site in app_site_desc -->
-	  <a href=""><button id="exit">Exit</button></a>
+	  <br><a href="site_scrape.html"><button id="start">🔰Start Scraping</button></a> <!-- Maybe rework how the buttons look? -->
+    <a href="site_site_desc.html"><button id="site_desc">🌐Sites Description</button></a>
+	  <a href="site_app_desc.html"><button id="app_desc">🎟️App Description</button></a>
+	  <a href=""><button id="exit-button">❌Exit</button></a>
+    </div>
 
     <script src="./renderer.js"></script>
   </body>
