--- a/site/site_scrape.html
+++ b/site/site_scrape.html
@@ -9,7 +9,7 @@
     <title>EventJP Scraper</title>
   </head>
   <body class="site_scrape">
-	<h1>Choose which sites you want to scrape</h1>
+	<h1>💮Choose which sites you want to scrape💮</h1>
 
     <div class="pages">
       <div class="page">
@@ -24,9 +24,9 @@
     </div>
 
     <div class="scrape_settings">
-    <a href="site_main.html"><button id="back" style="scale: 0.8;">Back</button></a>
-    <button id="inner_settings" style="scale: 0.8;">Settings</button> <!-- Add setting for eplus and l-tike -->
-    <a href="site_scraping.html"><button id="start_scrape"  style="scale: 0.8;">Start</button></a> <!-- Add another site after clicking this, which will show the choosen sites, loading wheel, prints in console -->
+    <a href="site_main.html"><button id="back" style="scale: 0.8;">⏪Back</button></a>
+    <button id="inner_settings" style="scale: 0.8;">📅Settings</button> <!-- Add setting for eplus and l-tike -->
+    <a href="site_scraping.html"><button id="start_scrape"  style="scale: 0.8;">✅Start</button></a> <!-- Add another site after clicking this, which will show the choosen sites, loading wheel, prints in console -->
     </div>
 
     <div id="settings_options" style="display: none;">
