Deleted 2, cuz looked bad

--- a/site/site_scrape.html
+++ b/site/site_scrape.html
@@ -9,7 +9,7 @@
     <title>EventJP Scraper</title>
   </head>
   <body class="site_scrape">
-	<h1>💮Choose which sites you want to scrape💮</h1>
+	<h1>Choose which sites you want to scrape</h1>
 
     <div class="pages">
       <div class="page">
