--- a/site/site_scraping.html
+++ b/site/site_scraping.html
@@ -18,3 +18,12 @@
     <script src="./renderer.js"></script>
   </body>
 </html>
+<!-- TO DO:
+EVERYTHING HERE
+renderer.js
+backend python file cuz something not right there imo
+main.js
+package.json
+connect all
+build app to an exe
+documentation-->
