--- a/site/site_scraping.html
+++ b/site/site_scraping.html
@@ -20,6 +20,7 @@
 </html>
 <!-- TO DO:
 EVERYTHING HERE
+Settings on site_scrape.html
 renderer.js
 backend python file cuz something not right there imo
 main.js
