Added Settings for l-tike and eplus

--- a/site/site_main.html
+++ b/site/site_main.html
@@ -15,7 +15,7 @@
 	  <br><a href="site_scrape.html"><button id="start">🔰Start Scraping</button></a> <!-- Maybe rework how the buttons look? -->
     <a href="site_site_desc.html"><button id="site_desc">🌐Sites Description</button></a>
 	  <a href="site_app_desc.html"><button id="app_desc">🎟️App Description</button></a>
-	  <a href=""><button id="exit-button">❌Exit</button></a>
+	  <button id="exit-button" class="exit-button">❌Exit</button>
     </div>
 
     <script src="./renderer.js"></script>
