--- a/site/site_scrape.html
+++ b/site/site_scrape.html
@@ -13,13 +13,13 @@
 
     <div class="pages">
       <div class="page">
-		    <button class="siteSelect" id="pagePia" type="button"><img id="pia_img" src="./tpiajp.png" alt="t.pia.jp icon" style="scale: 0.7;">t.pia.jp</button>
+		    <button class="siteSelect" id="pagePia" type="button"><img id="tpiajp" src="./tpiajp.png" alt="t.pia.jp icon" style="scale: 0.7;">t.pia.jp</button>
       </div>
       <div class="page">
-        <button class="siteSelect" id="pageEplus" type="button"><img id="eplus_img" src="./eplus.png" alt="eplus.jp icon"  style="scale: 0.7;">eplus.jp</button>
+        <button class="siteSelect" id="pageEplus" type="button"><img id="eplus" src="./eplus.png" alt="eplus.jp icon"  style="scale: 0.7;">eplus.jp</button>
       </div>
       <div class="page">
-        <button class="siteSelect" id="pageLTike" type="button"><img id="l-tike_img" src="./l-tike.png" alt="l-tike.com icon" style="scale: 1;">l-tike.com</button>
+        <button class="siteSelect" id="pageLTike" type="button"><img id="l_tike" src="./l_tike.png" alt="l-tike.com icon" style="scale: 1;">l-tike.com</button>
       </div>
     </div>
 
@@ -30,12 +30,35 @@
     </div>
 
     <div id="settings_options" style="display: none;">
-      <h2>Settings Options</h2>
-      <label for="option1">Option 1:</label>
-      <input type="checkbox" id="option1" name="option1"><br>
-      <label for="option2">Option 2:</label>
-      <input type="checkbox" id="option2" name="option2"><br>
-      <!-- TO DO -->
+      <h2 style="text-align: center;">l-tike.com Options</h2>
+      <div class="l-tike_options">
+      <div class="l-tike_input">
+        <label for="l-tike_start_date">Start Date:</label>
+        <input type="date" id="l-tike_start_date" name="l-tike_start_date" value="2025-04-18">
+      </div>
+      ↔
+      <div class="l-tike_input">
+        <label for="l-tike_end_date">End Date:</label>
+        <input type="date" id="l-tike_end_date" name="l-tike_end_date" value="2025-05-14">
+      </div>
+      </div>
+      <h2 style="text-align: center;">eplus.jp Options</h2>
+      <div class="eplus_options">
+      <div class="eplus_grid">
+            <button class="monthSelect" id="1" type="button">January</button>
+            <button class="monthSelect" id="2" type="button">February</button>
+            <button class="monthSelect" id="3" type="button">March</button>
+            <button class="monthSelect" id="4" type="button">April</button>
+            <button class="monthSelect" id="5" type="button">May</button>
+            <button class="monthSelect" id="6" type="button">June</button>
+            <button class="monthSelect" id="7" type="button">July</button>
+            <button class="monthSelect" id="8" type="button">August</button>
+            <button class="monthSelect" id="9" type="button">September</button>
+            <button class="monthSelect" id="10" type="button">October</button>
+            <button class="monthSelect" id="11" type="button">November</button>
+            <button class="monthSelect" id="12" type="button">December</button>
+          </div>
+      </div>
     </div>
 
     <script src="./renderer.js"></script>
