--- a/site/site_scrape.html
+++ b/site/site_scrape.html
@@ -29,7 +29,7 @@
     <a href="site_scraping.html"><button id="start_scrape"  style="scale: 0.8;">✅Start</button></a> <!-- Add another site after clicking this, which will show the choosen sites, loading wheel, prints in console -->
     </div>
 
-    <div id="settings_options" style="display: none;">
+    <div id="settings_options" style="display: block;">
       <h2 style="text-align: center;">l-tike.com Options</h2>
       <div class="l-tike_options">
       <div class="l-tike_input">
