--- a/site/site_scrape.html
+++ b/site/site_scrape.html
@@ -13,20 +13,20 @@
 
     <div class="pages">
       <div class="page">
-		    <button class="siteSelect" id="pagePia" type="button"><img id="tpiajp" src="./tpiajp.png" alt="t.pia.jp icon" style="scale: 0.7;">t.pia.jp</button>
+		    <button class="siteSelect" id="tpiajp" type="button"><img id="tpiajp" src="./tpiajp.png" alt="t.pia.jp icon" style="scale: 0.7;">t.pia.jp</button>
       </div>
       <div class="page">
-        <button class="siteSelect" id="pageEplus" type="button"><img id="eplus" src="./eplus.png" alt="eplus.jp icon"  style="scale: 0.7;">eplus.jp</button>
+        <button class="siteSelect" id="eplus" type="button"><img id="eplus" src="./eplus.png" alt="eplus.jp icon"  style="scale: 0.7;">eplus.jp</button>
       </div>
       <div class="page">
-        <button class="siteSelect" id="pageLTike" type="button"><img id="l_tike" src="./l_tike.png" alt="l-tike.com icon" style="scale: 1;">l-tike.com</button>
+        <button class="siteSelect" id="l_tike" type="button"><img id="l_tike" src="./l_tike.png" alt="l-tike.com icon" style="scale: 1;">l-tike.com</button>
       </div>
     </div>
 
     <div class="scrape_settings">
     <a href="site_main.html"><button id="back" style="scale: 0.8;">⏪Back</button></a>
-    <button id="inner_settings" style="scale: 0.8;">📅Settings</button> <!-- Add setting for eplus and l-tike -->
-    <a href="site_scraping.html"><button id="start_scrape"  style="scale: 0.8;">✅Start</button></a> <!-- Add another site after clicking this, which will show the choosen sites, loading wheel, prints in console -->
+    <button id="inner_settings" style="scale: 0.8;">📅Settings</button>
+    <a href="site_scraping.html"><button id="start_scrape"  style="scale: 0.8;">✅Start</button></a>
     </div>
 
     <div id="settings_options" style="display: block;">
