Where were you when python was kill?

--- a/site/site_scraping.html
+++ b/site/site_scraping.html
@@ -13,15 +13,13 @@
     <div id="chosen-sites" class="chosen-sites"></div>
     <div id="loading-wheel" class="loading-wheel"></div>
     <div id="output-box" class="output-box"></div>
-    <button id="exit-button" class="exit-button" style="display: none;">❌Exit</button>
+    <a href="site_scrape.html"><button id="back-button" style="scale: 1; width: 100%; max-width: 70px; margin-bottom: 5px;">⏪Back</button></a>
+    <button id="exit-button" class="exit-button" style="display: none; width: 100%; max-width: 70px; ">❌Exit</button>
 
     <script src="./renderer.js"></script>
   </body>
 </html>
 <!-- TO DO:
-EVERYTHING HERE
-Settings on site_scrape.html
-renderer.js
 backend python file cuz something not right there imo
 main.js
 package.json
