--- a/site/site_scrape.html
+++ b/site/site_scrape.html
@@ -26,7 +26,7 @@
     <div class="scrape_settings">
     <a href="site_main.html"><button id="back" style="scale: 0.8;">⏪Back</button></a>
     <button id="inner_settings" style="scale: 0.8;">📅Settings</button>
-    <a href="site_scraping.html"><button id="start_scrape"  style="scale: 0.8;">✅Start</button></a>
+    <a><button id="start_scrape"  style="scale: 0.8;">✅Start</button></a>
     </div>
 
     <div id="settings_options" style="display: block;">
