Edited minor change

--- a/site/site_main.html
+++ b/site/site_main.html
@@ -6,7 +6,7 @@
     <link href="./style.css" rel="stylesheet">
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <title>EventJPScrapper</title>
+    <title>EventJPScraper</title>
   </head>
   <body>
     <h1>🌠Event Scraper🌠</h1>
