--- a/site/site_scraping.html
+++ b/site/site_scraping.html
@@ -13,12 +13,9 @@
     <div id="chosen-sites" class="chosen-sites"></div>
     <div id="loading-wheel" class="loading-wheel"></div>
     <div id="output-box" class="output-box"></div>
-    <a href="site_scrape.html"><button id="back-button" style="scale: 1.2; width: 100%; max-width: 70px; margin-bottom: 15px;">⏪Back</button></a>
-    <button id="exit-button" class="exit-button" style="scale: 1.2; display: none; width: 100%; max-width: 70px; ">❌Exit</button>
+    <a href="site_scrape.html"><button id="back-button" style="transform: scale(1.2); width: 100%; max-width: 70px; margin-bottom: 15px;">⏪Back</button></a>
+    <button id="exit-button" class="exit-button" style="transform: scale(1.2); display: none; width: 100%; max-width: 70px; ">❌Exit</button>
 
     <script src="./renderer.js"></script>
   </body>
 </html>
-<!-- TODO:
-build app to an exe
-documentation-->
