Reworked a bit of code

--- a/site/site_main.html
+++ b/site/site_main.html
@@ -12,7 +12,7 @@
     <h1>🌠Event Scraper🌠</h1>
 
     <div class="settings">
-	  <br><a href="site_scrape.html"><button id="start">🔰Start Scraping</button></a> <!-- Maybe rework how the buttons look? -->
+	  <br><a href="site_scrape.html"><button id="start">🔰Start Scraping</button></a>
     <a href="site_site_desc.html"><button id="site_desc">🌐Sites Description</button></a>
 	  <a href="site_app_desc.html"><button id="app_desc">🎟️App Description</button></a>
 	  <button id="exit-button" class="exit-button">❌Exit</button>
